add price directive

--- a/app/templates/cart/customer-order.jade
+++ b/app/templates/cart/customer-order.jade
@@ -4,17 +4,17 @@
   .provider-profile--title-wrapper
     .provider-profile--subtitle
       span
-        | {{ ::("item.currency."+cartVm.cart.subtotal_items_currency | translate )}}
         order-items-total(
           order-items="providerProfile.customer_order_items"
+          currency="{{cartVm.cart.subtotal_items_currency}}"
         )
       span(
         ng-if="providerProfile.customer_order_delivery.delivery_method === 'shipping'"
       )
         span
-          | {{ ::("item.currency."+cartVm.cart.subtotal_items_currency | translate )}}
-        span
-          | {{ providerProfile.customer_order_delivery.shipping_fare_price_cents | priceCurrency | currency:''}}
+          | +
+        price(amount="{{providerProfile.customer_order_delivery.shipping_fare_price_cents}}"
+              currency="{{cartVm.cart.subtotal_items_currency}}")
         span {{ ::('cart.shippingCosts' | translate) }}
 
     .provider-profile--title
