--- a/app/templates/customer/orders/index.jade
+++ b/app/templates/customer/orders/index.jade
@@ -23,7 +23,8 @@ ion-view(
           div
             | {{ ::(customerOrder.submitted_at | formatDate:'DD MMMYYYY hh:mmA') }}
         .col.col-30.text-right.col--wrap
-          | {{ ::(customerOrder.subtotal_items_cents | priceCurrency | currency) }}
+          price(amount="{{customerOrder.subtotal_items_cents}}"
+                currency="")
         .col.col-15.text-right
           a.button.button-clear.button-positive.button-small(
             ui-sref='app.customerorders.show({ id: customerOrder.id , customerOrder: customerOrder })'
