--- a/app/templates/directives/cart/order-items-total.jade
+++ b/app/templates/directives/cart/order-items-total.jade
@@ -1,1 +1,3 @@
-| {{ orderItemsTotalVM.totalCents | priceCurrency | currency:'' }}
+span
+  price(amount="{{orderItemsTotalVM.totalCents}}"
+        currency="{{orderItemsTotalVM.currency}}")
