--- a/app/templates/item/items.jade
+++ b/app/templates/item/items.jade
@@ -45,10 +45,7 @@ ion-view(
       )
         .col.col-50.provider-item-title {{ ::item.titulo }}
         .col.col-25.text-right
-          span
-            | {{ ::("item.currency."+item.precio_currency | translate) }}
-          span
-            | {{ ::(item.precio_cents | priceCurrency | currency:'') }}
+          price(amount="{{item.precio_cents}}" currency="{{item.precio_currency}}")
         .col.col-25.text-right
           a.button.button-clear.button-positive.button-small(
             ui-sref="provider.items.show({id: item.id})"
