--- a/app/templates/directives/slick-item/slick-item.jade
+++ b/app/templates/directives/slick-item/slick-item.jade
@@ -16,7 +16,6 @@ slick-wrapper(
         .customer-item--title
           | {{ ::providerItem.provider_item.titulo }}
         .customer-item--value
-          span 
-            | {{ ::("item.currency."+providerItem.provider_item_precio_currency | translate) }}
           span
-            | {{ (providerItem.provider_item_precio_cents * providerItem.cantidad) | priceCurrency | currency:'' }} / {{ providerItem.cantidad }} {{ (providerItem.cantidad > 1) ? ('cart.cantidadPlural' | translate) : ('cart.cantidadSingular' | translate) }}
+            price(amount="{{providerItem.provider_item_precio_cents * providerItem.cantidad}}"
+                  currency="{{providerItem.provider_item_precio_currency}}")
