enhance couriers view

--- a/app/styles/common/buttons.scss
+++ b/app/styles/common/buttons.scss
@@ -61,6 +61,10 @@
   letter-spacing: -0.5px;
 }
 
+.button--narrow-padded {
+  padding-left: 12px;
+  padding-right: 12px;
+}
 
 .facebook-login
  {
