correccion de pr, se controla el error 422

--- a/app/templates/product/product.jade
+++ b/app/templates/product/product.jade
@@ -43,3 +43,4 @@ slick-wrapper(settings="productVm.slickConfig")
       ng-disabled='productVm.disableInputs'
       placeholder='{{ ::("cart.observacionesPlaceholder" | translate)}}'
     )
+  show-error(array-messages="productVm.messages")
