--- a/app/templates/courier/welcome.jade
+++ b/app/templates/courier/welcome.jade
@@ -1,5 +1,5 @@
 ion-view(
-  view-title='{{::("menu.user.courier"|translate)}}'
+  view-title='{{::("courier.welcomeTitle"|translate)}}'
 )
   ion-nav-title
     .alt-logo
