--- a/app/templates/provider/show.jade
+++ b/app/templates/provider/show.jade
@@ -1,5 +1,5 @@
 ion-view(
-  view-title='{{::("menu.user.provider"|translate)}}'
+  view-title='{{::("provider.profileName"|translate)}}'
 )
   ion-nav-title
     .alt-logo
