--- a/app/templates/directives/product-counter/product-counter.jade
+++ b/app/templates/directives/product-counter/product-counter.jade
@@ -2,7 +2,7 @@
   .actions-panel
     .button-minus-container
       button.button-icon.icon.ion-ios-minus-outline.button-minus(
-        ng-disabled="pcVm.itemsCount <= options.providerItem.cantidad"
+        ng-disabled="pcVm.itemsCount === pcVm.options.limit"
         ng-click="pcVm.handleClickMinus()"
       )
     .counter-container
