--- a/app/styles/customer/order.scss
+++ b/app/styles/customer/order.scss
@@ -45,4 +45,10 @@
       font-family: Montserrat-Regular;
     }
   }
+
+  .delivery-at-wrapper {
+    span {
+      margin-right: 5px;
+    }
+  }
 }
