--- a/app/styles/resource/details-table.scss
+++ b/app/styles/resource/details-table.scss
@@ -65,17 +65,15 @@
 
   .narrow-row-wrapper {
     margin-top: -5px;
+
+    .row:last-child .col {
+      border-bottom: 1px solid $base-yellow;
+    }
   }
 
   .row--top-border {
     padding-top: 0;
     border-top: 1px solid $base-yellow;
-  }
-
-  .row--without-border {
-    .col {
-      border: 0;
-    }
   }
 }
 
