--- a/app/templates/courier/orders/show.jade
+++ b/app/templates/courier/orders/show.jade
@@ -14,6 +14,20 @@ ion-view(
       .status-text
         | {{ ("shippingRequest.status." + coVm.order.status | translate) }}
 
+    .list.list-inset.list--no-borders.resource-details-table(
+      ng-if="coVm.order.estimated_time_mins"
+    )
+      | {{ ::("courier.deliveryETA" | translate) }}:
+      div
+        strong
+          humanized-countdown-time(
+            show-past="true"
+            time="coVm.order.estimated_delivery_at"
+          )
+        span  (
+        span {{ coVm.order.estimated_delivery_at | toDate | formatDate }}
+        span )
+
     .list.list-inset.list--no-borders.resource-details-table
       p.resource-detail-title
         | {{::("dispatchers.dispatchersData"|translate)}}
@@ -27,13 +41,13 @@ ion-view(
       .row
         .col.col-50.label {{::("courier.ordersNumber"|translate)}}
         .col.col-50.value {{coVm.order.id}}
-      .row.row--without-border
+      .row
         .col.col-50.label {{ ::("shippingRequest.providerName" | translate) }}
         .col.col-50.value {{ coVm.provider.nombre_establecimiento }}
       .row-wrapper.narrow-row-wrapper(
         ng-repeat="routeLeg in coVm.routeLegs"
       )
-        .row.row--top-border
+        .row
           .col.col-50.label
             | {{ ::("shippingRequest.routeLegs." + coVm.order.kind + ".leg" + $index | translate) }}
           .col.col-50.value
