--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -37,12 +37,29 @@ ion-view(
         span
         //- some spacing
 
-        .item.row.strong.narrow
+        .item.row.strong
           .col {{ ("order.delivery.status." + providerProfile.customer_order_delivery.status | translate) }}
         .item.row.strong(
           ng-if="providerProfile.customer_order_delivery.reason"
         )
           .col {{ providerProfile.customer_order_delivery.reason }}
+
+        span
+        //- some spacing
+
+        .item.row
+          .col.delivery-at-wrapper
+            span {{ ::("order.delivery.deliveryETA" | translate) }}:
+            span(
+              ng-if="!providerProfile.customer_order_delivery.delivery_at"
+            ) {{ ::("order.delivery.deliveryETAUnknown" | translate) }}
+            strong(
+              ng-if="providerProfile.customer_order_delivery.delivery_at"
+            )
+              humanized-countdown-time(
+                time="providerProfile.customer_order_delivery.delivery_at"
+              )
+              span {{ ::(providerProfile.customer_order_delivery.delivery_at | toDate | formatDate) }}
 
       .list.list-inset.list--no-borders.resource-collection-table.text-right
         .row.item
