error , usar funcion en vez de declararlo

--- a/app/templates/directives/product-counter/product-counter.jade
+++ b/app/templates/directives/product-counter/product-counter.jade
@@ -2,7 +2,7 @@
   .actions-panel
     .button-minus-container
       button.button-icon.icon.ion-ios-minus-outline.button-minus(
-        ng-disabled="pcVm.disabledButtonMinus"
+        ng-disabled="pcVm.disabledMinus()"
         ng-click="pcVm.handleClickMinus()"
       )
     .counter-container
