se comento el boton eliminar porque no hay api aun

--- a/app/templates/offices/detail.jade
+++ b/app/templates/offices/detail.jade
@@ -29,10 +29,9 @@ ion-view(
         .button.button-clear.button-positive.button-xsmall(
           ng-click="officesVm.showEditOffice()"
         ) {{::("globals.edit"|translate)}}
-        .button.button-clear.button-assertive.button-xsmall(
+        //.button.button-clear.button-assertive.button-xsmall(
           ng-click="officesVm.showDeleteOffice()"
-          ng-disabled="true"
-        ) {{::("globals.delete"|translate)}}
+       //) {{::("globals.delete"|translate)}}
 
 
     .list.list-inset.list--no-borders.resource-details-table
