--- a/app/styles/cart/edit-item.scss
+++ b/app/styles/cart/edit-item.scss
@@ -64,6 +64,13 @@
         margin: auto 10px;
         display: inline-block;
       }
+
+      @media (max-width: $device-xs-custom-width) {
+        .button {
+          padding-left: 20px;
+          padding-right: 20px;
+        }
+      }
     }
   }
 }
