--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -2,6 +2,7 @@
 @import "../bower_components/ionic/scss/_variables";
 
 @import "colors/colors";
+@import "responsive/variables";
 
 @import "overrides/lists";
 @import "overrides/bar-header";
