se uso directiva al igual que producto de proveedor para tiempo estimado

--- a/app/templates/courier/orders/show.jade
+++ b/app/templates/courier/orders/show.jade
@@ -6,6 +6,17 @@ ion-view(
   ion-content.shipping-request-show-page.courier-shipping-request-common(
     ng-class="{'has-footer':coVm.order.status !== 'delivered'}"
   )
+    .row
+      .col.col-60.label {{::("courier.deliveryETA"|translate)}}
+      .col.col-40.resource-form
+        .item-selectize
+          input(selectizecouriertime
+            config ="{create:true, maxItems:1}"
+            time= "coVm.takeRequestTime"
+            placeholder='Seleccione tiempo de entrega'
+            ng-model = "coVm.takeRequestTime"
+          )
+
     .map-view(ng-hide="coVm.mapIsHidden")
       #order-map(data-tap-disabled="true")
 
