--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -51,15 +51,15 @@ ion-view(
           .col.delivery-at-wrapper
             span {{ ::("order.delivery.deliveryETA" | translate) }}:
             span(
-              ng-if="!providerProfile.customer_order_delivery.delivery_at"
+              ng-if="!providerProfile.customer_order_delivery.courier_delivery_at"
             ) {{ ::("order.delivery.deliveryETAUnknown" | translate) }}
             strong(
-              ng-if="providerProfile.customer_order_delivery.delivery_at"
+              ng-if="providerProfile.customer_order_delivery.courier_delivery_at"
             )
               humanized-countdown-time(
-                time="providerProfile.customer_order_delivery.delivery_at"
+                time="providerProfile.customer_order_delivery.courier_delivery_at"
               )
-              span {{ ::(providerProfile.customer_order_delivery.delivery_at | toDate | formatDate) }}
+              span {{ ::(providerProfile.customer_order_delivery.courier_delivery_at | toDate | formatDate) }}
 
       .list.list-inset.list--no-borders.resource-collection-table.text-right
         .row.item
