some tweaks for couriers

--- a/app/styles/resource/details-table.scss
+++ b/app/styles/resource/details-table.scss
@@ -65,6 +65,7 @@
 
   .narrow-row-wrapper {
     margin-top: -5px;
+    margin-bottom: -5px;
 
     .row:last-child .col {
       border-bottom: 1px solid $base-yellow;
@@ -74,6 +75,10 @@
   .row--top-border {
     padding-top: 0;
     border-top: 1px solid $base-yellow;
+  }
+
+  .row--bottom-border {
+    border-bottom: 1px solid $base-yellow;
   }
 }
 
