Primera revision, feature 900 Cliente cancelar pedido

--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -150,4 +150,4 @@ ion-view(
     .list.list--centered.text-center
       button.button.button-outline.button-assertive(
         ng-click="customerOrderVm.cancelOrder()"
-      ) {{::("globals.cancel"|translate)}} {{::("order.order"|translate)}}
+      ) {{::("order.cancelCustomerOrder"|translate)}}
