--- a/app/templates/terms-and-cond/terms-and-cond.jade
+++ b/app/templates/terms-and-cond/terms-and-cond.jade
@@ -1,8 +1,7 @@
-ion-view(
-  view-title='{{::("termsAndConditions.termsAndConditions"|translate)}}'
-)
+ion-view
   .bar.bar-stable.bar-header
-    .alt-logo
+    .title
+      .alt-logo
   ion-content.pre-application-form.has-header.tos-show-page(
     locking="false"
   )
