--- a/app/templates/customer/orders/show.jade
+++ b/app/templates/customer/orders/show.jade
@@ -92,6 +92,11 @@ ion-view(
             price(amount="{{ ::providerProfile.totalCentsOrderProvider }}"
                   currency="{{customerOrderVm.customerOrder.subtotal_items_currency}}")
 
+      .list.list--centered.text-center(ng-if="providerProfile.customer_order_delivery.status !== 'canceled'")
+        button.button.button-outline.button-assertive(
+        ng-click="customerOrderVm.cancelOrder({{ ::providerProfile.customer_order_delivery.id}},$index)"
+        ) {{::("order.cancelCustomerOrder"|translate)}}
+
     //- not implemented yet
       .resource-collection
         .list.list-inset.list--no-borders.resource-collection-table
@@ -143,11 +148,3 @@ ion-view(
           .col
             strong {{ ::("provider.methodPayment" | translate) }}:
             span  {{ ::( customerOrderVm.customerOrder.forma_de_pago ) }}
-
-    span
-      //- some spacing
-
-    .list.list--centered.text-center
-      button.button.button-outline.button-assertive(
-        ng-click="customerOrderVm.cancelOrder()"
-      ) {{::("order.cancelCustomerOrder"|translate)}}
