--- a/app/styles/categories/show.scss
+++ b/app/styles/categories/show.scss
@@ -3,6 +3,7 @@
   background-origin: content-box;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: 50%;
   color: $white;
 
   .category-title {
