--- a/app/styles/provider/detail.scss
+++ b/app/styles/provider/detail.scss
@@ -1,8 +1,9 @@
 $gridBgColor: #F2F2F2;
+$providerShowPageCoverHeight: 160px;
 
 .provider-show-page {
   .provider-header {
-    max-height: 160px;
+    max-height: $providerShowPageCoverHeight;
     position: relative;
     background-size: cover;
 
@@ -10,13 +11,13 @@ $gridBgColor: #F2F2F2;
       height: 100%;
       min-height: 150px;
       width: 150px;
-      text-align: center;
-      display: flex;
+      text-align: end;
+      display: block;
       align-items: center;
 
       img {
         max-width: 100%;
-        max-height: 100%;
+        max-height: $providerShowPageCoverHeight;
         vertical-align: bottom;
       }
     }
